[gd_scene load_steps=3 format=3 uid="uid://cj17a8j23rmu4"]

[ext_resource type="Script" path="res://general/behaviors/button_enabler.gd" id="1"]
[ext_resource type="Script" path="res://core/level/side_menu/metanavig_menu.gd" id="2"]

[node name="MetanavigMenu" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="UndoButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 30)
layout_mode = 2
size_flags_horizontal = 3
text = "Undo"

[node name="RedoButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 30)
layout_mode = 2
size_flags_horizontal = 3
text = "Redo"

[node name="ResetButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 30)
layout_mode = 2
text = "Reset"

[node name="ButtonEnabler" type="Node" parent="."]
script = ExtResource("1")
